# cmake_pbtest

./: CMakeLists.txt  main.cpp
app/: CMakeLists.txt
app/hdr/: helloworld.h
app/src/: helloworld.cpp
grpc_pythonclienttest/: greeter_client.py  helloworld_pb2.py  helloworld_pb2_grpc.py
protos/: CMakeLists.txt  helloworld.grpc.pb.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.pb.h  helloworld.proto
